# sayathing

./: .dockerignore  .envrc  Dockerfile  INTEGRATION_TESTS.md  Makefile  README.md  conftest.py  container.py  docker-compose.yaml  main-dev.py  main.py  pyproject.toml  run_tests.sh  test_di.py  test_integration.py  test_shared_db.py
data/: queue.db
docs/: dependency_injection.md  onboarding.md  testing.md  worker_queue.solution.md
server/: http.py
server/config/: app.py  async_config.py  config.py
server/exceptions/: handlers.py
server/routes/: dashboard.py  health.py  tts.py  voice.py  voices.py
server/static/css/: dashboard.css
server/static/js/: dashboard.js
server/templates/: dashboard.html
tts/: __init__.py  engine_interface.py  kokoro_engine.py  kokoro_voices.json  tts.py  voices.py
worker/: README.md  __init__.py  config.py  container.py  database.py  primary_worker.py  publisher.py  queue.py  task.py  test_comprehensive.py  test_persistence.py  test_retry_worker.py
worker/config/: __init__.py  config.py
worker/workers/: __init__.py  primary_worker.py  retry_worker.py
