[project]
name = "sayathing"
version = "25.9.1"
description = "Open Source Platform That Gives Your Text a Voice."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kokoro>=0.9.4",
    "soundfile>=0.13.1",
    "pip>=24.0",
    "misaki[en]>=0.9.4",
    "uvicorn>=0.35.0",
    "fastapi[standard]>=0.116.1",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "ulid-py>=1.1.0",
    "dependency-injector>=4.41.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning",
    "ignore:on_event is deprecated, use lifespan event handlers instead.",
]
